--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 name = "evokit"
 version = "0"
 description = "The EvoKit framework, experiment build 0"
-dependencies = []
+dependencies = ["graphviz>=0.20.3"]
 requires-python = ">= 3.12.0"
 
 authors = [
@@ -33,11 +33,11 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Life  ",
     "Topic :: Software Development :: Libraries :: Python Modules ",
     "Typing :: Typed",
+    "License :: All Rights Reserved"
 ]
 
 # Add tags:
 #   Intended Audience
-#   License
 
 [build-system]
 
