--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Life  ",
     "Topic :: Software Development :: Libraries :: Python Modules ",
     "Typing :: Typed",
-    "License :: All Rights Reserved"
+    "License :: MIT"
 ]
 
 # Add tags:
