--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 name = "evokit"
 version = "0"
 description = "The EvoKit framework, experiment build 0"
-dependencies = ["graphviz>=0.20.3"]
+dependencies = ["numpy>=1.26"]
 requires-python = ">= 3.12.0"
 
 authors = [
@@ -37,7 +37,13 @@ classifiers = [
 ]
 
 # Add tags:
-#   Intended Audience
+#   Intended Audieniece
+
+[project.optional-dependencies]
+# To visualise representations
+visualise = ["graphviz>=0.20.3"]
+# To execute test cases.
+test = ["pytest", "nbmake"]
 
 [build-system]
 
