--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 
 name = "evokit"
-version = "0.1"
+version = "0.2"
 description = "The EvoKit framework, experiment build 1"
 dependencies = ["numpy>=1.26"]
 requires-python = ">= 3.12.0"
@@ -18,20 +18,19 @@ keywords = ["Machine Learning", "Evolutionary Computing", "Framework"]
 
 # Overtagging
 classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
+    "Development Status :: 3 - Alpha",
 
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
 
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: Implementation :: CPython",
 
-    "Natural Language :: English  ",
+    "Natural Language :: English",
 
     "Topic :: Documentation :: Sphinx",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence   ",
-    "Topic :: Scientific/Engineering :: Artificial Life  ",
-    "Topic :: Software Development :: Libraries :: Python Modules ",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Artificial Life",
+    "Topic :: Software Development :: Libraries :: Python Modules",
     "Typing :: Typed",
     "License :: OSI Approved :: MIT License"
 ]
