build(evokit): Add dependency `dill`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ test = ["pytest>=8.2.0", "nbmake>=1.5.4"]
 # To visualise accounting records
 accounting_visualise = ["numpy>=1.26.4", "matplotlib>=3.10.1"]
 multiprocess = ["multiprocess>=0.70.18"]
+pickling = ["dill>=0.4.0"]
 
 
 
