--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 
 name = "evokit"
-version = "0.3.1"
-description = "The EvoKit framework, experiment build 2.1"
+version = "0.5.0"
+description = "A evolutionary computing framework"
 requires-python = ">= 3.12.0"
 
 authors = [
