--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ gp_visualise = ["graphviz>=0.20.3"]
 # To execute test cases.
 test = ["pytest>=8.2.0", "nbmake>=1.5.4"]
 # To visualise watching records
-watching_visualise = ["numpy>=1.26.4", "matplotlib>=3.10.1"]
+watching_visualise = ["matplotlib>=3.10.1"]
 multiprocess = ["multiprocess>=0.70.18"]
 pickling = ["dill>=0.4.0"]
 
