--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,8 @@ classifiers = [
 gp_visualise = ["graphviz>=0.20.3"]
 # To execute test cases.
 test = ["pytest>=8.2.0", "nbmake>=1.5.4"]
-# To visualise watching records
-watching_visualise = ["matplotlib>=3.10.1"]
+# To visualise watcher records
+watch_visualise = ["matplotlib>=3.10.1"]
 multiprocess = ["multiprocess>=0.70.18"]
 pickling = ["dill>=0.4.0"]
 
