--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,22 +33,25 @@ classifiers = [
     "Typing :: Typed",
 ]
 
-# Add tags:
-#   Intended Audieniece
-
 [project.optional-dependencies]
-# To visualise representations
+# This name is also hard-coded in evokit._utils.dependency.
+# Also, be sure to update it when adding / removing other
+#   optional dependencies.
+full = ["graphviz>=0.20.3",
+        "matplotlib>=3.10.1",
+        "numpy>=1.26.4",
+        "multiprocess>=0.70.18",
+        "dill>=0.4.0",
+        "guppy>=3.1.5", "pympler>=1.1"]
+
 gp_visualise = ["graphviz>=0.20.3"]
-# To execute test cases.
-test = ["pytest>=8.2.0", "nbmake>=1.5.4"]
-# To visualise watcher records
 watch_visualise = ["matplotlib>=3.10.1"]
 numpy = ["numpy>=1.26.4"]
 multiprocess = ["multiprocess>=0.70.18"]
 pickling = ["dill>=0.4.0"]
 watch_memory = ["guppy>=3.1.5", "pympler>=1.1"]
 
-
+test = ["pytest>=8.2.0", "nbmake>=1.5.4"]
 
 [build-system]
 
