--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,8 @@ full = ["graphviz>=0.20.3",
         "dill>=0.4.0",
         "guppy>=3.1.5", "pympler>=1.1"]
 
-gp_visualise = ["graphviz>=0.20.3"]
-watch_visualise = ["matplotlib>=3.10.1"]
+gp_visual = ["graphviz>=0.20.3"]
+watch_visual = ["matplotlib>=3.10.1"]
 numpy = ["numpy>=1.26.4"]
 multiprocess = ["multiprocess>=0.70.18"]
 pickling = ["dill>=0.4.0"]
